[package]
name = "truck-bottle-stl-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
truck-base = "0.3.0"
truck-meshalgo = "0.2.0"
#truck-topology = "0.4.0"
#truck-geometry = "0.3.0"
truck-modeling = "0.4.0"
#truck-shapeops = "0.2.0"
#truck-geotrait = "0.2.0"
truck-polymesh = "0.4.0"

#derive_more = "0.99.17"
#rustc-hash = "1.1.0"
#serde = { version = "1.0.137", features = ["derive"] }
#thiserror = "1.0.31"

#[dev-dependencies]
#rand = "0.8.5"
#serde_json = "1.0.81"
#truck-modeling = { version = "0.4.0"}
